--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
   <base href="/">
+<!--  <base href="https://alpiepho.github.io/scoreboard_tn/">-->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
