--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,10 @@
   <title>scoreboard_tn</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<body>
+
+<!-- <body style="background-image: linear-gradient(to right, #69F0AE , #FF5252)"> -->
+
+<body bgcolor="black">
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
