refactor, trying to simplify

--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,9 @@
 
   <title>scoreboard_tn</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Unsafe area color (like around notch) -->
+  <meta name="theme-color" content="#000000">
 </head>
 
 <!-- <body style="background-image: linear-gradient(to right, #69F0AE , #FF5252)"> -->
