converting to scoreboard_tn2 to allow dev without changing version 1

--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
   <base href="/">
-<!--  <base href="https://alpiepho.github.io/scoreboard_tn/">-->
+<!--  <base href="https://alpiepho.github.io/scoreboard_tn2/">-->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -21,13 +21,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="scoreboard_tn">
+  <meta name="apple-mobile-web-app-title" content="scoreboard_tn2">
   <link rel="apple-touch-icon" href="icons/180.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>scoreboard_tn</title>
+  <title>scoreboard_tn2</title>
   <link rel="manifest" href="manifest.json">
 
   <!-- Unsafe area color (like around notch) -->
